Added translations SK

--- a/i18n/sk/docusaurus-plugin-content-blog/2025-04-04-post.md
+++ b/i18n/sk/docusaurus-plugin-content-blog/2025-04-04-post.md
@@ -5,11 +5,11 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-## 🚀 Controlz 2025.1.0 Closed Beta Has Begun!
+## 🚀 Uzavretá beta verzia Controlz 2025.1.0 sa začala!
 
-We're excited to announce that the closed beta test for Controlz 2025 is now live! Selected users can now explore new features, provide feedback, and help shape the future of Controlz.
+S radosťou oznamujeme, že uzavretý beta test pre Controlz 2025 je teraz spustený! Vybraní používatelia môžu skúmať nové funkcie, poskytovať spätnú väzbu a pomáhať formovať budúcnosť Controlz.
 
 <!-- truncate -->
 
-If you've received an invitation, check your email for access details. 
-Thanks for being part of this important phase!
+Ak ste dostali pozvánku, skontrolujte svoj e-mail pre podrobnosti prístupu.  
+Ďakujeme, že ste súčasťou tejto dôležitej fázy!
