--- a/i18n/sk/docusaurus-plugin-content-blog/2025-04-14-post.md
+++ b/i18n/sk/docusaurus-plugin-content-blog/2025-04-14-post.md
@@ -5,16 +5,16 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Popis
 
-This update includes several important bug fixes that enhance performance, reduce battery consumption, and improve block behavior in the programming environment.
+Táto aktualizácia obsahuje niekoľko dôležitých opráv chýb, ktoré zlepšujú výkon, znižujú spotrebu batérie a zlepšujú správanie blokov v programovacom prostredí.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmeny
 
-- **Fixed a bug causing high CPU usage, battery drain, and low performance.**
-- **Fixed a bug where gamepad blocks** (e.g., “is button pressed”, “is D-PAD button pressed”) **couldn’t be attached to other blocks.**
-- **Fixed an issue in the step switch event block** that incorrectly handled touch events and step counting.
-- **Fixed a bug in the list block’s “item of”** where no more than one block could be attached as an argument index.
+- **Opravená chyba spôsobujúca vysoké využitie CPU, vybitie batérie a nízky výkon.**
+- **Opravená chyba, pri ktorej bloky gamepadu** (napr. „je tlačidlo stlačené“, „je stlačené tlačidlo D-PAD“) **nebolo možné pripojiť k iným blokom.**
+- **Opravený problém v bloku udalosti prepínača kroku**, ktorý nesprávne spracovával dotykové udalosti a počítanie krokov.
+- **Opravená chyba v bloku zoznamu „položka z“**, kde nebolo možné pripojiť viac než jeden blok ako argument indexu.
