--- a/i18n/sk/docusaurus-plugin-content-blog/2025-04-19-post.md
+++ b/i18n/sk/docusaurus-plugin-content-blog/2025-04-19-post.md
@@ -5,17 +5,17 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Popis
 
-This update introduces new joystick customization options, UI improvements, and important stability fixes.
+Táto aktualizácia prináša nové možnosti prispôsobenia joysticku, vylepšenia používateľského rozhrania a dôležité opravy stability.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmeny
 
-- **Fixed a bug in the blocks palette collection selector**: selecting a collection, scrolling to another, and returning had no effect.
-- **Fixed a crash when loading heavy profiles** with a large number of blocks.
-- **Added “Axes type” property** to joystick settings to support **single-axis mode** (X, Y, XY).
-- **Added colorization** for steering wheel controllers (“GMZ”, “No Mercy”).
-- **Added “is pressed” blocks** for steering wheels and pedals.
+- **Opravená chyba v selektore kolekcií palety blokov**: výber kolekcie, posúvanie na inú a návrat nemali žiadny efekt.
+- **Opravený pád pri načítavaní ťažkých profilov** s veľkým počtom blokov.
+- **Pridaná vlastnosť „Typ osí“** do nastavení joysticku na podporu **jednoosového režimu** (X, Y, XY).
+- **Pridaná farebnosť** pre ovládače volantov („GMZ“, „No Mercy“).
+- **Pridané bloky „je stlačené“** pre volanty a pedále.
