--- a/i18n/sk/docusaurus-plugin-content-blog/2025-05-10-post.md
+++ b/i18n/sk/docusaurus-plugin-content-blog/2025-05-10-post.md
@@ -5,21 +5,21 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Popis
 
-This update improves support for tablets, adds useful testing pages, and fixes several compatibility and performance issues.
+Táto aktualizácia zlepšuje podporu tabletov, pridáva užitočné testovacie stránky a opravuje niekoľko problémov s kompatibilitou a výkonom.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmeny
 
-- **Added tablet layout** for better utilization of larger screens.
-- **Fixed a bug where the "hub button pressed" block** appeared for hubs that do not support this action. Also fixed inappropriate **color sensor blocks** for unsupported hubs (e.g., BuWizz).
-- **Fixed a bug where the "motor run" block** didn’t affect motors without encoders due to missing alternate run commands.
-- **Added a page for testing gamepad buttons.**
-- **Added a hub testing page** with a dashboard showing information, connected port devices, and port shake status.
-- **Fixed incorrect accelerometer data interpretation** for BuWizz 2 and 3, which caused faulty orientation readings.
-- **Fixed RAM memory leaks** that led to app termination on some devices due to high system memory usage.
-- **Fixed bugs in profile loading** that previously caused crashes in certain scenarios.
-- **Fixed an Android bug** where releasing gamepad sticks did not reset axis values to zero.
+- **Pridané rozloženie pre tablety** pre lepšie využitie väčších obrazoviek.
+- **Opravená chyba, kde sa blok "hub button pressed"** zobrazoval pre huby, ktoré túto akciu nepodporujú. Tiež opravené nevhodné **bloky farebných senzorov** pre nepodporované huby (napr. BuWizz).
+- **Opravená chyba, kde blok "motor run"** neovplyvňoval motory bez enkodérov kvôli chýbajúcim alternatívnym príkazom spustenia.
+- **Pridaná stránka na testovanie tlačidiel gamepadu.**
+- **Pridaná stránka na testovanie hubov** s dashboardom zobrazujúcim informácie, pripojené zariadenia na portoch a stav otriasania portov.
+- **Opravené nesprávne interpretovanie údajov z akcelerometra** pre BuWizz 2 a 3, ktoré spôsobovalo chybné snímanie orientácie.
+- **Opravené úniky RAM pamäte**, ktoré viedli k ukončeniu aplikácie na niektorých zariadeniach kvôli vysokému využitiu systémovej pamäte.
+- **Opravené chyby pri načítaní profilov**, ktoré predtým spôsobovali pády v určitých scenároch.
+- **Opravená chyba v Androide**, kde uvoľnenie joystickov gamepadu neobnovovalo hodnoty osi na nulu.
