--- a/i18n/sk/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/sk/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -5,17 +5,17 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Popis
 
-This update enhances the block editing experience, improves performance, and ensures proper functionality on newer Android versions.
+Táto aktualizácia zlepšuje skúsenosť s úpravou blokov, zvyšuje výkon a zabezpečuje správnu funkčnosť na novších verziách Androidu.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmeny
 
-- **Fixed a bug with hub scanning on Android 12+** by requesting precise location permission.
-- **Added option to hide/show the blocks palette** by clicking on the currently selected block collection.
-- **Added a resize handle** to the blocks palette to allow **manual resizing**.
-- **Fixed high CPU usage** when a profile was loaded but the program wasn’t running.
-- **Improved the "String list" block editor** to avoid content being cut off. Now items are split into columns for better visibility with large lists.
+- **Opravená chyba so skenovaním hubov na Android 12+** pridaním požiadavky na presné povolenie polohy.
+- **Pridaná možnosť skryť/zobraziť paletu blokov** kliknutím na aktuálne vybranú kolekciu blokov.
+- **Pridaná úchytka na zmenu veľkosti** palety blokov pre **manuálne prispôsobenie veľkosti**.
+- **Opravené vysoké využitie CPU** pri načítaní profilu, keď program nebežal.
+- **Vylepšený editor bloku "String list"**, aby sa predišlo orezávaniu obsahu. Položky sú teraz rozdelené do stĺpcov pre lepšiu prehľadnosť pri veľkých zoznamoch.
