--- a/i18n/sk/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/sk/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -1,6 +1,6 @@
 ---
 slug: closed-test-release-2025-1-5
-title: Release Controlz 2025.1.5
+title: Vydanie Controlz 2025.1.5
 authors: [maxim]
 tags: [dev, test]
 ---
